--- a/Russian/main/SecurityCenter.apk/res/values-ru/strings.xml
+++ b/Russian/main/SecurityCenter.apk/res/values-ru/strings.xml
@@ -1,6 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="cta_dialog_title">Предупреждение</string>
+	<string name="app_manager_stop_wakepath_dlg_msg_with_xspace_app">Удаление этого приложения ограничит последовательный запуск. Связанные клонированные приложения будут также удалены. Удалить %s?</string>
+	<string name="add_game_notification_summary">Нажмите для запуска и ускорения скорости</string>
+     <string name="app_maanger_app_uninstalled_toast">Это приложение удалено</string>
+     <string name="app_manager_app_lock">Блокировка приложений</string>
+     <string name="app_manager_app_version_name">Версия:</string>
+     <string name="app_manager_apps_generatioin">Обновления</string>
+     <string name="app_manager_apps_generation_summary">Обновление для использования последних функций</string>
+     <string name="app_manager_appupdate_remind">Сообщать об обновлениях</string>
+     <string name="app_manager_bipartition">Кланированные приложения</string>
+     <string name="app_manager_card_permission_title">Разрешения</string>
+     <string name="app_manager_default_close_summary">Нет настроек по умолчанию</string>
+     <string name="app_manager_default_open">Открыть по умолчанию</string>
+     <string name="app_manager_default_open_summary">Вы используете это приложение по умолчанию для некоторых действий</string>
+     <string name="app_manager_default_open_title">Сбросить настройки</string>
+     <string name="app_manager_details_electric_title">Батарея</string>
+     <string name="app_manager_details_storage_title">Память</string>
+     <string name="app_manager_details_traffic_title">Трафик</string>
+     <string name="app_manager_dlg_cancel">Отмена</string>
+     <string name="app_manager_dlg_ok">OK</string>
+     <string name="app_manager_force_stop_dlg_text">После принудительной остановки приложение может работать неправильно</string>
+     <string name="app_manager_force_stop_dlg_title">Остановить принудительно?</string>
+     <string name="app_manager_loading_data">Загрузка данных…</string>
+     <string name="app_manager_more_times">Доступ 100000+ раз</string>
+     <string name="app_manager_my_app">Мои приложения</string>
+     <string name="app_manager_not_record">Нет записей</string>
+     <string name="app_manager_perm_monitor_make_calls">Совершать звонки</string>
+     <string name="app_manager_perm_monitor_read_call_history">Читать звонки</string>
+     <string name="app_manager_perm_monitor_read_contacts">Читать контакты</string>
+     <string name="app_manager_perm_monitor_read_sms">Читать SMS </string>
+     <string name="app_manager_perm_monitor_send_sms">Отправлять SMS</string>
+     <string name="app_manager_permission">Разрешения конфиденциальности (7 дней)</string>
+     <string name="app_manager_permission_call_phone_over">Совешено звонков 100000+ раз</string>
+     <string name="app_manager_permission_manager_title">Разрешения</string>
+     <string name="app_manager_permission_notify_summary">Счетчик на иконке, всплывающие и на экране блокировки</string>
+     <string name="app_manager_permission_notify_title">Уведомления</string>
+     <string name="app_manager_permission_power_saving_summary">Экономия батареи MIUI</string>
+     <string name="app_manager_permission_power_saving_title">Экономия батареи</string>
+     <string name="app_manager_permission_read_contact_over">Доступ к контактам 100000+ раз</string>
+     <string name="app_manager_permission_read_mms_over">Чтение SMS 100000+</string>
+     <string name="app_manager_permission_read_record_over">Чтение звонков 100000+ раз</string>
+     <string name="app_manager_permission_send_mms_over">Отправка SMS 100000+ раз</string>
+     <string name="app_manager_permission_startself_summary">Приложения в автозапуске занимают оперативную память и разряжают батарею</string>
+     <string name="app_manager_permission_startself_title">Автозапуск</string>
+     <string name="app_manager_power">Разрешения</string>
+     <string name="app_manager_rebide_wakepath">Ограничить</string>
+     <string name="app_manager_reduce_wakepath_dialog">Минимизировать последовательный запуск</string>
+     <string name="app_manager_reduce_wakepath_summary">Ограничение автозапуска минимизирует последовательный запуск. Ограничить автозапуск для %s?</string>
+     <string name="app_manager_reject_count_over">Заблокировано 100000+ раз</string>
+     <string name="app_manager_show_detail_infos">Посмотреть все</string>
+     <string name="app_manager_start_by">Запущено %s</string>
+     <string name="app_manager_start_count_over">100000+ раз</string>
+     <string name="app_manager_stop_wakepath_dialog_summary">Удалить %s, чтобы ограничить последовательный запуск?</string>
+     <string name="app_manager_stop_wakepath_dialog_title">Ограничение последовательного запуска</string>
+     <string name="app_manager_stop_wakepath_success">Успешно ограничено</string>
+     <string name="app_manager_stop_wp_dialog_cancel">Отмена</string>
+     <string name="app_manager_stop_wp_dialog_uninstall">Удалить</string>
+     <string name="app_manager_title">Управление приложениями</string>
+     <string name="app_manager_uninstall_with_xspace_app_dlg_msg">Клонированные приложения будут удалены вместе с данными приложения</string>
+     <string name="app_manager_uninstall_xspace_app_dlg_msg">Удаление приложения удалит все его данные</string>
+     <string name="app_manager_uninstall_xspace_app_dlg_title">Удалить клонированное приложение?</string>
+     <string name="app_manager_unstall_application">Удалить</string>
+     <string name="app_manager_update_label_text">Новое</string>
+     <string name="app_manager_wake_path_card_title">История (2 дня)</string>
+     <string name="app_manager_wakepath_dialog_buttontext">OK</string>
+     <string name="app_manager_wakepath_dialog_summary">Последовательный запуск - одно приложение запускает другое приложение в фоновом режиме. Это может разряжать батарею и снижать производительность системы. MIUI обычно блокирует его.</string>
+     <string name="app_manager_wakepath_dialog_title">Последовательный запуск</string>
+     <string name="search_result_text">Приложение не найдено</string>
 	<string name="start_tc_button">Калибровка</string>
 	<string name="pref_more_settings">Дополнительно</string>
     <string name="pref_month_traffic_limit">Месячный лимит трафика</string>
@@ -107,7 +174,7 @@
      <string name="resource_buy_flow">Купить мобильный трафик</string>
      <string name="resource_payment_security">Безопасность платежей</string>
      <string name="resource_usb_install">Управление установками</string>
-     <string name="show_system_app">Показывать системные приложения</string>
+     <string name="show_system_app">Показать системные приложения</string>
      <string name="shutdown_cancel_reminder_detail2">Похоже, Вы сейчас играете в игру. Запланированное отключение питания отменено.</string>
 	<string name="card_main_hbassistant_summary">Быстрый захват красных пакетов :)</string>
      <string name="card_main_hbassistant_title">Красный пакет</string>
@@ -153,7 +220,7 @@
      <string name="main_alert_message_open_traffic_ctrl">Мы рекомендуем ограничить использование трафика</string>
      <string name="main_open_traffic_ctrl_button">Ограничить трафик</string>
      <string name="pref_traffic_manage_title">Использование трафика</string>
-	<string name="sp_settings_exception_count_zero">Пусто</string>
+	<string name="sp_settings_exception_count_zero">Список пуст</string>
      <string name="sp_toast_removed_from_sign_white_list">Удалено из исключений. Будет сканироваться в следующий раз.</string>
 	<string name="app_install_tips_go_to">Открыть</string>
      <string name="app_install_tips_install_success">%1$s установлено</string>
@@ -713,7 +780,7 @@
     <string name="cta_button_text_agree">OK</string>
     <string name="cta_settings">Разрешать доступ к сети</string>
 	<string name="app_name_na">Трафик</string>
-    <string name="list_empty_text">Пусто</string>
+    <string name="list_empty_text">Список пуст</string>
     <string name="dialog_title_attention">Внимание</string>
     <string name="kilobyte_per_second">" К/с"</string>
     <string name="megabyte_per_second">" М/с"</string>
@@ -762,8 +829,8 @@
     <string name="firewall_rule_group_title_wifi">Wi-Fi</string>
     <string name="firewall_fragment_tab_title_nonsys">Пользовательские</string>
     <string name="firewall_fragment_tab_title_sys">Системные</string>
-    <string name="firewall_fragment_sys_listempty">Пусто</string>
-    <string name="firewall_fragment_nonesys_listempty">Пусто</string>
+    <string name="firewall_fragment_sys_listempty">Список пуст</string>
+    <string name="firewall_fragment_nonesys_listempty">Список пуст</string>
     <string name="firewall_service_network_blocked">%1$s запрещено использовать %2$s</string>
     <string name="firewall_network_restrict_notify_title">%1$s не может использовать сеть</string>
     <string name="firewall_network_restrict_notify_mobile">Мобильный интернет</string>
@@ -772,7 +839,7 @@
     <string name="firewall_restrict_android_dialog_content">Если запретить Android подключение к интернету, некоторые ключевые функции, такие как точки доступа Wi-Fi, могут не работать</string>
     <string name="usage_sorted_activity_lable">Использование данных</string>
     <string name="usage_sorted_loading_text">Загрузка…</string>
-    <string name="usage_sorted_empty_text">Пусто</string>
+    <string name="usage_sorted_empty_text">Список пуст</string>
     <string name="person_hotpot">Мобильные точки доступа</string>
     <string name="system_app">Системные приложения</string>
     <string name="deleted_apps">Удаленные приложения</string>
@@ -893,7 +960,7 @@
     <string name="traffic_setting_fragment_sms_content">Текст сообщения</string>
     <string name="traffic_setting_fragment_send_num_tips">Введите номер телефона</string>
     <string name="traffic_setting_fragment_sms_content_tips">Напишите сообщение</string>
-    <string name="traffic_setting_fragment_null">Пусто</string>
+    <string name="traffic_setting_fragment_null">Список пуст</string>
     <string name="traffic_setting_fragment_loacation_alert_nomore">Больше не показывать</string>
     <string name="data_usage_warning_title">" Предупреждение трафика"</string>
     <string name="data_usage_warning_body">Нажмите для просмотра информации</string>
@@ -1006,7 +1073,7 @@ For more info check the message you received from your carrier"</string>
     <string name="datausage_purchase_pkglist_networkerror">Не удалось подключиться к сети. Проверьте сеть и повторите.</string>
     <string name="datausage_purchase_pkglist_servererror">Ошибка сервера</string>
     <string name="datausage_purchase_order_history">История</string>
-    <string name="datausage_purchase_none_history">Пусто</string>
+    <string name="datausage_purchase_none_history">Список пуст</string>
     <string name="datausage_purchase_time_in">" on "</string>
     <string name="datausage_purchase_order_failure">Покупка не удалась</string>
     <string name="datausage_purchase_order_failure_cause">Your purchase failed because…</string>
@@ -1091,7 +1158,7 @@ For more info check the message you received from your carrier"</string>
     <string name="mi_service_framework">Mi Service Framework</string>
     <string name="mi_service_app_detail">Трафик</string>
     <string name="mi_service_traffic_detail">Информация</string>
-    <string name="none_mi_service_app_detail">Пусто</string>
+    <string name="none_mi_service_app_detail">Список пуст</string>
     <string name="show_traffic_dialog_title">Показывать трафик в панели</string>
     <string name="show_traffic_dialog_message">Отображать информацию об использовании трафика в панели уведомлений. Вы можете отключить эту функцию в любое время в настройках.</string>
     <string name="tc_sms_report_title">Report data usage bug</string>
@@ -1869,7 +1936,7 @@ For more info check the message you received from your carrier"</string>
     <string name="activity_title_root_acquired">Управление суперпользователем</string>
     <string name="activity_title_root_note">О суперпользователе</string>
     <string name="pm_root_success_notification_title">Права суперпользователя включены</string>
-    <string name="empty_title_auto_start_list">Пусто</string>
+    <string name="empty_title_auto_start_list">Список пуст</string>
     <string name="hints_auto_start_warning_info">Запрет автозапуск отключит входящие сообщения</string>
     <string name="activity_title_apps_manager">Приложения</string>
     <string name="activity_title_permissions_manager">Разрешения</string>
@@ -1901,10 +1968,10 @@ For more info check the message you received from your carrier"</string>
     <string name="toast_root_apply_accept">%s разрешены права суперпользователя</string>
     <string name="toast_root_apply_reject">%s запрещены права суперользователя</string>
     <string name="permission_send_sms_descx">Прямая отправка SMS и MMS-сообщений</string>
-    <string name="empty_title_system_cache_list">Пусто</string>
-    <string name="empty_title_system_process_list">Пусто</string>
-    <string name="empty_title_virus_list">Пусто</string>
-    <string name="empty_title_risk_list">Пусто</string>
+    <string name="empty_title_system_cache_list">Список пуст</string>
+    <string name="empty_title_system_process_list">Список пуст</string>
+    <string name="empty_title_virus_list">Список пуст</string>
+    <string name="empty_title_risk_list">Список пуст</string>
     <string name="button_text_create_shortcut">Добавить ярлык</string>
     <string name="button_text_uninstall_shortcut">Удалить ярлык</string>
     <string name="toast_shortcut_install">Ярлык создан</string>
@@ -1951,7 +2018,7 @@ For more info check the message you received from your carrier"</string>
     <string name="button_text_ignore">OK</string>
     <string name="button_text_ignore_alert_title">Игнорировать это уведомление?</string>
     <string name="back">Назад</string>
-    <string name="empty_title_manual_item_white_list">Пусто</string>
+    <string name="empty_title_manual_item_white_list">Список пуст</string>
     <string name="title_cloud_account">Войдите в Mi аккаунт</string>
     <string name="summary_cloud_account">Чтобы получить больше сервисов, войдите в Mi аккаунт</string>
     <string name="title_cloud_service">Mi Cloud выключен</string>
@@ -2224,7 +2291,7 @@ For more info check the message you received from your carrier"</string>
     <string name="empty_title_ad">Реклама не найдена</string>
     <string name="empty_title_apk">Нет файлов</string>
     <string name="empty_title_garbage_cache">Кэш не найден</string>
-    <string name="empty_title_garbage_white_list">Пусто</string>
+    <string name="empty_title_garbage_white_list">Список пуст</string>
     <string name="empty_title_installed_apps">Нет приложений</string>
     <string name="empty_title_large_files">Нет файлов</string>
     <string name="empty_title_residual">Нет файлов</string>
@@ -2242,7 +2309,7 @@ For more info check the message you received from your carrier"</string>
     <string name="hints_garbage_cleanup_result_risk">Подозрительно</string>
     <string name="hints_garbage_cleanup_result_safe">Безопасно</string>
     <string name="hints_garbage_handle_item_content">файлов: %1$d | %2$s</string>
-    <string name="hints_garbage_handle_item_empty_content">Пусто</string>
+    <string name="hints_garbage_handle_item_empty_content">Список пуст</string>
     <string name="hints_install_apps_interval">исполь. %d дн. назад</string>
     <string name="hints_install_apps_risk">обнаружен риск</string>
     <string name="hints_install_apps_virus">обнаружен вирус</string>
@@ -2293,7 +2360,7 @@ For more info check the message you received from your carrier"</string>
     <string name="pref_category_title_cleanup_white_list">Настройки белого списка</string>
     <string name="pref_category_title_garbage_cleanup_check">Уведомления</string>
     <string name="pref_category_title_other_clean_settings">Дополнительные настройки</string>
-    <string name="pref_content_cleanup_white_list_none">Пусто</string>
+    <string name="pref_content_cleanup_white_list_none">Список пуст</string>
     <string name="pref_summary_auto_clean_and_alert">Настройте очистку для автоматичекого запуска</string>
     <string name="pref_summary_auto_update_cleanup_db">Обновлено: %s</string>
     <string name="pref_summary_cleanup_white_list">Мусор из белого списка не будет удаляться</string>
