--- a/Russian/main/Settings.apk/res/values-ru/strings.xml
+++ b/Russian/main/Settings.apk/res/values-ru/strings.xml
@@ -1122,12 +1122,12 @@
      <string name="path_wifi_wapi_cert_install">Настройки/Wi-Fi/Дополнительные настройки/Установить WAPI сертификат</string>
      <string name="path_wifi_wapi_cert_uninstall">Настройки/Wi-Fi/Дополнительные настройки/Удалить WAPI сертификат</string>
      <string name="path_wps_connect_title">Настройки/Wi-Fi/Дополнительные настройки/PIN-код WPS</string>
-     <string name="path_xspace">Настройки/XSpace</string>
+     <string name="path_xspace">Настройки/Клонированные приложения</string>
      <string name="path_zen_mode_option_miui_silent">Настройки/Звук и вибрация/Режим без звука</string>
      <string name="personal_section_title">Персонализация</string>
      <string name="search_accessibility_captioning_title">Титры</string>
      <string name="search_accessibility_display_daltonizer_preference_title">Коррекция цвета</string>
-     <string name="search_accessibility_global_gesture_preference_title">Accessibility shortcut</string>
+     <string name="search_accessibility_global_gesture_preference_title">Специальные возможности</string>
      <string name="search_accessibility_long_press_timeout_preference_title">Задержка нажатия и удержания</string>
      <string name="search_accessibility_screen_magnification_title">Жесты для увеличения</string>
      <string name="search_accessibility_settings">Специальные возможности</string>
@@ -1146,7 +1146,7 @@
      <string name="search_cloud_restore_section_title">Восстановление из Mi Cloud</string>
      <string name="search_copyright">Авторские права</string>
      <string name="search_credentials_install">Установить с устройства</string>
-     <string name="search_dndm_alarm_content">Исключенния</string>
+     <string name="search_dndm_alarm_content">Исключения</string>
      <string name="search_dndm_auto_button_title">Настройка времени</string>
      <string name="search_dndm_open">Не беспокоить</string>
      <string name="search_dndm_repeated_call_setting_title">Повторные вызовы</string>
@@ -1166,13 +1166,13 @@
      <string name="search_music_headset_mode_settings">Кнопки наушников</string>
      <string name="search_music_mi_effect_title">Mi Sound</string>
      <string name="search_nfc_se_route_title">Secure element position</string>
-     <string name="search_ntts_settings_title">tts_settings_title;TTS</string>
+     <string name="search_ntts_settings_title">Синтезатор речи;TTS</string>
      <string name="search_pointer_speed">Скорость указателя</string>
      <string name="search_power_hide_mode_title">Управление приложениями</string>
      <string name="search_pref_volume_wake_title">Пробуждение устройства</string>
      <string name="search_privacy_policy">Политика конфиденциальности</string>
      <string name="search_restriction_nfc_enable_title">NFC</string>
-     <string name="search_safe_result_header_title_system">Privacy</string>
+     <string name="search_safe_result_header_title_system">Конфиденциальность</string>
      <string name="search_screen_key_long_press_timeout">Время нажатия</string>
      <string name="search_screen_on_proximity_sensor_title">Защита датчиком</string>
      <string name="search_second_space">Второй профиль</string>
@@ -1216,7 +1216,7 @@
      <string name="search_wifi_wapi_cert_install">Установить WAPI сертификат</string>
      <string name="search_wifi_wapi_cert_uninstall">Удалить WAPI сертификат</string>
      <string name="search_wps_connect_title">PIN-код WPS</string>
-     <string name="search_xspace">XSpace</string>
+     <string name="search_xspace">Клонированные приложения</string>
      <string name="search_zen_mode_option_miui_silent">Режим без звука</string>
      <string name="second_space">Второй пользователь</string>
      <string name="settings_toggle_position_divider_list">Переключатели, расположенные выше активны</string>
@@ -1428,13 +1428,13 @@
      <string name="search_do_not_disturb">Не беспокоить;Vip;Set time;Exceptions;Repeated calls</string>
      <string name="search_lab_functions_title">Бета функции,Lab function</string>
      <string name="search_legal_information">Правовая информация</string>
-     <string name="search_micloud">Sync;Miclound</string>
+     <string name="search_micloud">Синхронизация;Mi Clound</string>
      <string name="search_music_audio_effect_optimize">Настройки звука</string>
      <string name="search_music_headset_settings">Наушники и аудио эффекты</string>
      <string name="search_networks_title">Мобильные сети</string>
      <string name="search_notification_app_list_settings">Настройки уведомлений</string>
      <string name="search_notification_sound_title">мелодия уведомления</string>
-     <string name="search_onekey_migrate">Mi Mover;One key migrate</string>
+     <string name="search_onekey_migrate">Mi Mover;Перенос данных</string>
      <string name="search_other_advanced_settings">Дополнительно;Конфиденциальность;Дата и время;Язык и ввод;Режим управления одной рукой;Батарея и производительность;Storage;Notification light;Led;Headphones &amp; audio effects;Buttons;Keys;Accessibility;Beta features;Lab functions;Developer options;Backup &amp; reset;Transfer;One key migrate</string>
      <string name="search_owner_info_settings">Информация о владельце</string>
      <string name="search_page_layout_settings">Размер шрифта</string>
@@ -1444,8 +1444,8 @@
      <string name="search_security_passwords_title">Пароль</string>
      <string name="search_security_settings">Настройки кинфиденциальности</string>
      <string name="search_sms_delivered_sound_title">Отчет о доставке</string>
-     <string name="search_sound_settings">Sound;Volumes;Silent mode;Alarm;Music;Vibrate;Phone ringtone;Default notification sound;Message received;Message delivered;Touch;Screen lock sound;Audio settings;Suppress noise</string>
-     <string name="search_sync_settings">Sync;Auto;WLAN only</string>
+     <string name="search_sound_settings">Звук;Громкость;Режим без звука;Будильник;Вибрация;Мелодия;Уведомления;Сообщение;Звук нажатия на экран;Звук блокировки экрана;Настройки звука;Шумоподавление</string>
+     <string name="search_sync_settings">Синхронизация;Авто;Только Wi-Fi</string>
      <string name="search_system_app_settings">Системные приложения</string>
      <string name="search_theme_settings">Темы</string>
      <string name="search_toggle_position">Настроить переключатели</string>
@@ -2116,7 +2116,7 @@
      <string name="sim_settings_summary">%1$s - %2$s</string>
      <string name="sim_settings_title">SIM-карты</string>
      <string name="sim_setup_wizard_title">SIM-карты</string>
-     <string name="sim_slot_empty">Пустая SIM-карта</string>
+     <string name="sim_slot_empty">Нет SIM-карты</string>
      <string name="sim_status_summary">Информация о SIM-картах</string>
      <string name="simulate_color_space">Имитировать аномалию</string>
      <string name="slot_name">SIM %d</string>
@@ -2158,7 +2158,7 @@
      <string name="usage_access_title">Приложения, получившие доступ</string>
      <string name="usage_type_actual_power">Фактический расход</string>
      <string name="usage_type_computed_power">Расчетный расход</string>
-     <string name="usage_type_radio_active">Время работы приемопередатчика</string>
+     <string name="usage_type_radio_active">Время работы радиомодуля</string>
      <string name="usage_type_total_battery_capacity">Емкость батареи</string>
      <string name="usb_audio_disable_routing">Откл. передачу аудио (USB)</string>
      <string name="usb_audio_disable_routing_summary">Отключить автоматическую маршрутизацию с периферийными устройствами (USB)</string>
@@ -2306,14 +2306,14 @@
 	 <string name="install_no_market_app_summary">Разрешить установку приложений от неизвестных источников</string>
      <string name="install_no_market_app_title">Неизвестные источники</string>  
 	 <string name="fluency_mode_confirm_and_reboot">OK</string>
-	 <string name="fluency_mode">Системная анимация</string>
+	 <string name="fluency_mode">Анимация системы</string>
      <string name="fluency_mode_confirm_title">Требуется перезагрузка</string>
      <string name="fluency_mode_confirm_will_fluency_mode_text">Перезагрузите устройство для применения</string>
      <string name="fluency_mode_confirm_will_normal_mode_text">Включение анимации и использование дополнительной памяти может привести к снижению производительности на некоторых устройствах</string>
      <string name="fluency_mode_enabled_name">Оптимизация системы</string>
      <string name="fluency_mode_summary">Отключить системную анимацию и уменьшить использование памяти</string>
 	 <string name="gesture_wakeup_title">Пробуждение двойным нажатием</string>
-	 <string name="search_fluency_mode">Системная системы</string>
+	 <string name="search_fluency_mode">Анимация системы</string>
 	 <string name="status_bar_settings_carrier_sim">SIM-карта %1$s:</string>
 	 <string name="status_bar_app_disable_notification">Ничего</string>
      <string name="status_bar_app_enable_on_keyguard_and_notificationBar">Экран блокировки, панель уведомлений</string>
@@ -3586,7 +3586,7 @@
      <string name="location_neighborhood_level">Использовать Wi-Fi и мобильные сети для определения местоположения</string>
      <string name="location_neighborhood_level_wifi">Местоположение определяется с помощью Wi-Fi</string>
      <string name="location_network_based">По координатам сети</string>
-     <string name="location_no_recent_apps">В последнее время приложения не запрашивали геоданные</string>
+     <string name="location_no_recent_apps">Запросов местоположения не было</string>
      <string name="location_settings_title">Местоположение</string>
      <string name="location_sources_heading">Определение местоположения</string>
      <string name="location_street_level">Разрешить приложениям использовать GPS для точного определения твоего местоположения</string>
@@ -4375,7 +4375,7 @@
      <string name="search_language">язык</string>
      <string name="search_led">индикаторы</string>
      <string name="search_network">сеть</string>
-     <string name="search_power_mode">режим</string>
+     <string name="search_power_mode">настройки питания</string>
      <string name="search_privacy">конфиденциальность</string>
      <string name="search_ring_volume">громкость звонка</string>
      <string name="search_ringtone">мелодия</string>
@@ -4596,7 +4596,7 @@ SIM-карта не поддерживается."</string>
      <string name="status_roaming">Роуминг</string>
      <string name="status_serial_number">Серийный номер</string>
      <string name="status_serialno">Серийный номер</string>
-     <string name="status_service_state">Мобильная сети</string>
+     <string name="status_service_state">Состояние сети</string>
      <string name="status_signal_strength">Уровень сигнала</string>
      <string name="status_sim">Статус SIM-карты</string>
      <string name="status_sim_1">SIM-карта 1</string>
@@ -4801,10 +4801,10 @@ SIM-карта не поддерживается."</string>
      <string name="usage_type_audio">Аудио</string>
      <string name="usage_type_cpu">ЦП всего</string>
      <string name="usage_type_cpu_foreground">ЦП активный режим</string>
-     <string name="usage_type_data_recv">Получено данных (интернет)</string>
-     <string name="usage_type_data_send">Отправлено данных (интернет)</string>
-     <string name="usage_type_data_wifi_recv">Получено данных (Wi-Fi)</string>
-     <string name="usage_type_data_wifi_send">Отправлено данных (Wi-Fi)</string>
+     <string name="usage_type_data_recv">Получено (моб. интернет)</string>
+     <string name="usage_type_data_send">Отправлено (моб. интернет)</string>
+     <string name="usage_type_data_wifi_recv">Получено (Wi-Fi)</string>
+     <string name="usage_type_data_wifi_send">Отправлено (Wi-Fi)</string>
      <string name="usage_type_gps">GPS</string>
      <string name="usage_type_no_coverage">Время отсутствия сигнала</string>
      <string name="usage_type_on_time">Время работы</string>
@@ -5328,7 +5328,7 @@ SIM-карта не поддерживается."</string>
      <string name="wifi_wapi_cert_cancel_button">Отмена</string>
      <string name="wifi_wapi_cert_create_subdir">Создать каталог</string>
      <string name="wifi_wapi_cert_delet_subdir">Выберите сертификат</string>
-     <string name="wifi_wapi_cert_install">Уставновить WAPI сертификат</string>
+     <string name="wifi_wapi_cert_install">Установить WAPI сертификат</string>
      <string name="wifi_wapi_cert_install_button">Установить</string>
      <string name="wifi_wapi_cert_mgmt_as_dont_exist">На SD-карте нет AS сертификатов. Проверьте и повторите позже.</string>
      <string name="wifi_wapi_cert_mgmt_as_format_is_wrong">Неверный формат AS сертификата. Установите правильный AS сертификат.</string>
@@ -5337,13 +5337,13 @@ SIM-карта не поддерживается."</string>
      <string name="wifi_wapi_cert_mgmt_subdir_exist">Имя каталога уже существует</string>
      <string name="wifi_wapi_cert_mgmt_subdir_name_is_empty">введите имя каталога</string>
      <string name="wifi_wapi_cert_mgmt_titlebar">Управление WAPI сертификатами</string>
-     <string name="wifi_wapi_cert_mgmt_user_dont_exist">Введите имя сетификата</string>
+     <string name="wifi_wapi_cert_mgmt_user_dont_exist">Введите имя сертификата</string>
      <string name="wifi_wapi_cert_mgmt_user_format_is_wrong">Неверный формат. Установите правильный сертификат.</string>
      <string name="wifi_wapi_cert_mgmt_user_name_is_empty">Введите мия сертификата</string>
      <string name="wifi_wapi_cert_uninstall">Удалить WAPI сертификат</string>
      <string name="wifi_wapi_cert_uninstall_button">Удалить</string>
      <string name="wifi_wapi_certification_dont_exist">Сетевой пароль не правильный. Попробуйте еще раз.</string>
-     <string name="wifi_wapi_user_cert">Пользователький сетификат</string>
+     <string name="wifi_wapi_user_cert">Пользователький сертификат</string>
      <string name="wifi_wps_available_first_item">Доступна защищенная сеть</string>
      <string name="wifi_wps_available_second_item"> (доступна защищенная сеть)</string>
      <string name="wifi_wps_complete">WPS успешно. Соединение с сетью…</string>
