--- a/Russian/main/ThemeManager.apk/res/values-ru/strings.xml
+++ b/Russian/main/ThemeManager.apk/res/values-ru/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
      <string name="account_id_not_login">Нажмите, чтобы войти</string>
+	 <string name="the_picture_is_not_support">Изображение не поддерживается</string>
 	 <string name="ad_app_download_start">Начало загрузки…</string>
      <string name="ad_app_is_downloading">Загрузка…</string>
      <string name="wallpaper_auto_change_title">Экран блокировки</string>
